--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "electron-vue-vite",
-  "version": "2.0.0",
+  "name": "Music",
+  "version": "0.0.1",
   "main": "dist/electron/main/index.js",
   "description": "Really simple Electron + Vue + Vite boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "author": "Barak Levinson (Extremely)",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "@vitejs/plugin-vue": "^3.0.1",
     "electron": "^20.0.2",
     "electron-builder": "^23.3.3",
+    "sass": "^1.54.9",
     "typescript": "^4.7.4",
     "vite": "^3.0.8",
     "vite-plugin-electron": "^0.9.3",
@@ -30,11 +31,7 @@
       "VITE_DEV_SERVER_URL": "http://127.0.0.1:3344"
     }
   },
-  "keywords": [
-    "electron",
-    "rollup",
-    "vite",
-    "vue3",
-    "vue"
-  ]
+  "dependencies": {
+    "vue-router": "^4.1.5"
+  }
 }
