--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "^14.18.0 || >=16.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.185",
     "@vitejs/plugin-vue": "^3.0.1",
     "electron": "^20.0.2",
     "electron-builder": "^23.3.3",
@@ -32,6 +33,7 @@
     }
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "pinia": "^2.0.22",
     "vue-router": "^4.1.5"
   }
