--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.185",
+    "@types/webmidi": "^2.0.6",
     "@vitejs/plugin-vue": "^3.0.1",
     "electron": "^20.0.2",
     "electron-builder": "^23.3.3",
+    "lodash": "^4.17.21",
+    "pinia": "^2.0.22",
     "sass": "^1.54.9",
     "typescript": "^4.7.4",
     "vite": "^3.0.8",
     "vite-plugin-electron": "^0.9.3",
     "vue": "^3.2.37",
+    "vue-router": "^4.1.5",
     "vue-tsc": "^0.40.1"
   },
   "debug": {
@@ -31,10 +35,5 @@
       "VITE_DEV_SERVER_PORT": 3344,
       "VITE_DEV_SERVER_URL": "http://127.0.0.1:3344"
     }
-  },
-  "dependencies": {
-    "lodash": "^4.17.21",
-    "pinia": "^2.0.22",
-    "vue-router": "^4.1.5"
   }
 }
