--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vite-plugin-electron": "^0.9.3",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
-    "vue-tsc": "^0.40.1"
+    "vue-tsc": "^0.40.1",
+    "vue3-click-away": "^1.2.4"
   },
   "debug": {
     "env": {
