--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/lodash": "^4.14.185",
     "@types/webmidi": "^2.0.6",
     "@vitejs/plugin-vue": "^3.0.1",
+    "@xmldom/xmldom": "^0.8.2",
     "electron": "^20.0.2",
     "electron-builder": "^23.3.3",
     "lodash": "^4.17.21",
